--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch-main": "tailwindcss build Assets/Frameworks/Tailwind/tailwind.css -o Assets/Stylesheets/Tailwind.css --watch",
     "watch-authentication": "tailwindcss build Modules/Authentication/AuthenticationAssets/LoginInject.css -o Assets/Stylesheets/Tailwind.css --watch",
     "watch-courseProfile": "tailwindcss build Modules/Teacher/CourseProfile/CourseProfileAssets/css/courseInject.css -o Assets/Stylesheets/Tailwind.css --watch",
-    "watch-progress": "tailwindcss build Modules/Teacher/Progress/ProgressAssets/progressInjection.css -o Assets/Stylesheets/Tailwind.css --watch"
+    "watch-progress": "tailwindcss build Modules/Teacher/Progress/ProgressAssets/progressInjection.css -o Assets/Stylesheets/Tailwind.css --watch",
+    "master-watcher": "tailwindcss build Assets/Stylesheets/MasterInject.css -o Assets/Stylesheets/Tailwind.css --watch"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,10 @@
     "autoprefixer": "^10.3.7",
     "jquery": "^3.6.0",
     "postcss": "^8.3.11",
-    "postcss-import": "^14.0.2",
+    "postcss-nesting": "^10.1.2",
     "tailwindcss": "^2.2.17"
+  },
+  "devDependencies": {
+    "postcss-import": "^14.0.2"
   }
 }
