--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/iabdulhannan/Catalyst#readme",
   "dependencies": {
     "autoprefixer": "^10.3.7",
+    "csv": "^6.0.5",
     "jquery": "^3.6.0",
     "postcss": "^8.3.11",
     "postcss-nesting": "^10.1.2",
+    "request": "^2.88.2",
     "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
