--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "autoprefixer": "^10.3.7",
     "csv": "^6.0.5",
     "jquery": "^3.6.0",
+    "js-xlsx": "^0.8.22",
     "postcss": "^8.3.11",
     "postcss-nesting": "^10.1.2",
     "request": "^2.88.2",
-    "tailwindcss": "^2.2.17"
+    "tailwindcss": "^2.2.17",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "postcss-import": "^14.0.2"
